--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -16,12 +16,12 @@
   font-style: italic;
 }
 @font-face {
-  font-family: 'soleil', sans-serif;
+  font-family: @body-font;
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
-  font-family: 'soleil', sans-serif;
+  font-family: @body-font;
   font-weight: 600;
   font-style: normal;
 }
