--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -8,7 +8,7 @@ section > .container {
 		width: 95%;
 		max-width: none;
 	}
-	@media(max-width: 800px) {
+	@media(max-width: @tablet-breakpoint) {
 		width: 100%;
 	}
 }
