--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -2,12 +2,12 @@
 @import "mixin.less";
 
 .postlist {
-  @media(max-width: 800px) {
+  @media(max-width: @tablet-breakpoint) {
     padding: 0;
     margin: 0 auto;
     width: 92%;
   }
-  @media(max-width: 600px) {
+  @media(max-width: @mobile-breakpoint) {
     margin: 0 auto 20px;
     width: 93%;
   }
