--- a/src/less/global/social.less
+++ b/src/less/global/social.less
@@ -21,7 +21,7 @@
   transform: scale(1);
   margin: 0 10px 0 0;
   transition: all 0.2s ease-out;
-  @media(max-width: 800px) {
+  @media(max-width: @tablet-breakpoint) {
     -webkit-transform: scale(0.8);
   }
 }
