--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -26,6 +26,8 @@
 @base-url: 'https://hackersandslackers.com/';
 @assets: '../../assets/';
 
+
+// Social colors
 @facebook-color: #3b5998;
 @medium-color: #000;
 @twitter-color: #3cf;
@@ -35,6 +37,7 @@
 @github-color: #000;
 @rss-color: #ff6501;
 
+// Series Colors
 @pandas-color:#7b5195;
 @flask-color:#be90ca;
 @code-color:#6691c8;
@@ -47,5 +50,12 @@
 @mapbox-color: #4264fb;
 @graphql-color: #E10098;
 
-
+// Shadows
 @shadow-color: 0 0 5px rgba(65, 67, 144, 0.15);
+
+// Breakpoints
+@tablet-breakpoint: 800px;
+@mobile-breakpoint: 600px;
+
+// Font Styles
+@body-font: 'soleil', sans-serif;
