--- a/src/less/pages/customtemplates.less
+++ b/src/less/pages/customtemplates.less
@@ -8,7 +8,7 @@
   .tag-name {
     font-size: 1.3em;
     margin-top: 0;
-    font-family: 'soleil', sans-serif;
+    font-family: @body-font;
 
     i {
       font-size: 0.8em;
@@ -18,7 +18,7 @@
   }
 
   .main-header {
-    @media(max-width: 800px) {
+    @media(max-width: @tablet-breakpoint) {
       height: 200px;
     }
   }
