--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -4,6 +4,7 @@
 /* Post Styles */
 @import 'posts/about-author.less';
 @import 'posts/post.less';
+@import 'posts/postmeta.less';
 @import 'posts/linkpreview.less';
 @import 'posts/postfooter.less';
 @import 'posts/responsivetable.less';
@@ -12,6 +13,7 @@
 @import 'posts/serieswidget.less';
 @import 'posts/previewplaceholder.less';
 @import 'posts/nextprev.less';
+@import 'posts/baguettebox.less';
 
 /* Code */
 @import 'posts/code.less';
