--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -13,7 +13,7 @@
 
     &::before {
       color: white;
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         font-size: 12em !important;
       }
     }
