--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -15,7 +15,7 @@
       font-family: 'Hack';
       color: #a0e4cf;
 
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         white-space: pre;
         text-overflow: ellipsis;
         max-width: 100%;
