--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -24,7 +24,7 @@
         font-weight: 100;
         font-family: 'Hack';
 
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           white-space: pre;
           text-overflow: ellipsis;
           max-width: 100%;
@@ -40,7 +40,7 @@
       .comment {
         color: #737a8e !important;
 
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           white-space: pre;
           text-overflow: ellipsis;
           max-width: 100%;
