--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -19,7 +19,7 @@
     background: white;
     padding: 30px 40px;
     width: auto;
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       padding: 3px 30px 20px;
     }
   }
