--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -25,7 +25,7 @@
 			max-width: 85%;
 			margin: 15px auto 0;
 			font-weight: 300;
-			@media(max-width: 600px) {
+			@media(max-width: @mobile-breakpoint) {
 				max-width: 90%;
 				margin: 10px auto 0;
 			}
@@ -83,7 +83,7 @@
 					display: block;
 					white-space: nowrap;
 					font-size: 15px;
-					font-family: 'soleil', sans-serif;
+					font-family: @body-font;
 					margin: 0;
 				}
 
@@ -194,7 +194,7 @@
 
 					.name {
 						font-size: 1.2em;
-						font-family: 'soleil', sans-serif;
+						font-family: @body-font;
 					}
 
 					.country,
@@ -281,7 +281,7 @@
 									line-height: 1.1;
 									width: 100%;
 									height: 14px;
-									font-family: 'soleil', sans-serif;
+									font-family: @body-font;
 									margin-top: 3px;
 								}
 							}
@@ -292,7 +292,7 @@
 								display: inline-block!important;
 								line-height: 1.4;
 								padding-top: 5px;
-								font-family: 'soleil', sans-serif;
+								font-family: @body-font;
 							}
 						}
 
