--- a/src/less/etc/applyform.less
+++ b/src/less/etc/applyform.less
@@ -5,13 +5,13 @@
     width: 100%;
     padding: 50px 80px;
     margin: auto;
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       padding: 40px 30px;
     }
 
     h1 {
       margin: 0;
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         line-height: 1.2;
         font-size: 1.8em;
       }
@@ -23,7 +23,7 @@
     }
 
     h2 {
-      font-family: 'soleil', sans-serif;
+      font-family: @body-font;
       text-align: left;
       font-size: 1.5em;
       border-bottom: 1px solid #d5dae6;
@@ -54,7 +54,7 @@
     }
 
     label {
-      font-family: 'soleil', sans-serif;
+      font-family: @body-font;
       font-size: 14px;
       color: #505050;
       margin-bottom: 5px;
@@ -65,13 +65,13 @@
       flex-wrap: wrap;
       flex-direction: row;
       justify-content: space-between;
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         display: block;
       }
 
       .input-field-group {
         width: 49%;
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           width: 100%;
         }
       }
