--- a/src/less/etc/error.less
+++ b/src/less/etc/error.less
@@ -53,7 +53,7 @@ header {
     height: 120px;
     text-shadow: -3px 3px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
     font-size: 160px;
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       font-size: 120px;
     }
   }
@@ -84,7 +84,7 @@ header {
     color: white !important;
     background: rgba(255, 255, 255, 0.25);
     transition: all 0.2s ease-out;
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       background-color: white;
       color: #444444;
       width: 100%;
