--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -21,14 +21,14 @@
 		letter-spacing: 2px;
 		line-height: 1;
 		margin: 0 0 25px;
-		@media(max-width: 800px) {
+		@media(max-width: @tablet-breakpoint) {
 			margin: 10px 0 10px !important;
 		}
 	}
 	@media(max-width: 1000px) {
 		padding: 30px 40px;
 	}
-	@media(max-width: 600px) {
+	@media(max-width: @mobile-breakpoint) {
 		margin-top: 10px;
 		display: block;
 		padding: 40px;
@@ -39,7 +39,7 @@
 		margin: auto;
 		display: flex;
 		justify-content: space-between;
-		@media(max-width: 600px) {
+		@media(max-width: @mobile-breakpoint) {
 			margin: auto;
 			justify-content: space-between;
 			flex-direction: row;
@@ -60,7 +60,7 @@
 				display: block;
 				text-align: left;
 				transition: all 0.3s ease-out;
-				font-family: 'soleil', sans-serif;
+				font-family: @body-font;
 				font-size: 0.93em;
 				margin-bottom: 2px;
 				white-space: nowrap;
@@ -76,12 +76,12 @@
 
 				a {
 					color: #fff;
-					font-family: 'soleil', sans-serif;
+					font-family: @body-font;
 					font-weight: 300;
 				}
 			}
 		}
-		@media(max-width: 800px) {
+		@media(max-width: @tablet-breakpoint) {
 			width: -webkit-fill-available;
 			margin: 10px 0 30px;
 			width: 22%;
@@ -90,7 +90,7 @@
 				margin-bottom: 0;
 			}
 		}
-		@media(max-width: 600px) {
+		@media(max-width: @mobile-breakpoint) {
 			max-width: none;
 			padding: 0;
 		}
@@ -102,10 +102,10 @@
 .widget.about {
 	min-width: 24%;
 	width: 24%;
-	@media(max-width: 800px) {
+	@media(max-width: @tablet-breakpoint) {
 		width: 35% !important;
 	}
-	@media(max-width: 600px) {
+	@media(max-width: @mobile-breakpoint) {
 		min-width: 100%;
 		border-bottom: 1px solid rgba(76, 108, 157, 0.27);
 		padding-bottom: 20px !important;
@@ -131,12 +131,12 @@
 	.description {
 		color: white;
 		width: 100%;
-		font-family: 'soleil', sans-serif;
+		font-family: @body-font;
 		font-weight: 100;
 		font-size: 0.85em;
 		line-height: 1.6;
 		margin: 15px 0 25px;
-		@media(max-width: 600px) {
+		@media(max-width: @mobile-breakpoint) {
 			margin: 15px 0 20px;
 		}
 	}
@@ -149,7 +149,7 @@
 		i {
 			font-size: 20px;
 			mix-blend-mode: hard-light;
-			@media(max-width: 600px) {
+			@media(max-width: @mobile-breakpoint) {
 				font-size: 25px;
 			}
 		}
@@ -209,7 +209,7 @@
 =====================================================*/
 .widget.contributors {
 	margin-top: 10px;
-	@media(max-width: 800px) {
+	@media(max-width: @tablet-breakpoint) {
 		display: none;
 	}
 }
@@ -217,7 +217,7 @@
 .widget.links,
 .widget.tags {
 	margin-top: 10px;
-	@media(max-width: 600px) {
+	@media(max-width: @mobile-breakpoint) {
 		margin: 10px 0 0;
 		width: 40%;
 		min-width: unset;
@@ -230,7 +230,7 @@
 	text-align: center;
 	color: white;
 	font-size: 0.85em;
-	font-family: 'soleil', sans-serif;
+	font-family: @body-font;
 	font-weight: 300;
 	padding: 15px 0;
 	line-height: 1.5;
