--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -10,12 +10,12 @@
 	width: -webkit-fill-available;
 	width: -moz-fill-available;
 	box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
-	@media(max-width: 800px) {
+	@media(max-width: @tablet-breakpoint) {
 		margin: 0 auto 25px;
 		width: 92%;
 		padding: 40px 0;
 	}
-	@media(max-width: 600px) {
+	@media(max-width: @mobile-breakpoint) {
 		margin-left: 0 !important;
 		margin-right: 0 !important;
 		margin-top: 0;
@@ -42,7 +42,7 @@
 		text-align: 14px;
 		line-height: 1.5;
 		font-weight: 300;
-		@media(max-width: 600px) {
+		@media(max-width: @mobile-breakpoint) {
 			width: 90%;
 			margin: 15px auto 0;
 			font-size: 0.9em;
@@ -51,25 +51,25 @@
 	}
 
 	.post-excerpt {
-		font-family: 'soleil', sans-serif;
+		font-family: @body-font;
 	}
 
 	h3 {
 		margin-bottom: 10px;
-		font-family: 'soleil', sans-serif;
-		@media(max-width: 600px) {
+		font-family: @body-font;
+		@media(max-width: @mobile-breakpoint) {
 			margin: 5px 10px;
 		}
 	}
 
 	.meta-info {
-		font-family: 'soleil', sans-serif;
+		font-family: @body-font;
 		font-size: 0.9em;
 		display: flex;
 		justify-content: space-around;
 		width: 81%;
 		margin: auto;
-		@media(max-width: 600px) {
+		@media(max-width: @mobile-breakpoint) {
 			flex-direction: column;
 		}
 
@@ -81,7 +81,7 @@
 			i {
 				margin-right: 7px;
 			}
-			@media(max-width: 600px) {
+			@media(max-width: @mobile-breakpoint) {
 				display: block;
 				line-height: 1.6;
 			}
