--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -8,7 +8,7 @@
     background-color: #192e4c;
     background-blend-mode: multiply;
     box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       margin-left: calc(~"-50vw + 50%") !important;
       margin-right: calc(~"-50vw + 50%") !important;
       margin-top: -20px;
@@ -17,7 +17,7 @@
     .tag-name {
       font-size: 2.2em;
       color: white !important;
-      font-family: 'soleil', sans-serif;
+      font-family: @body-font;
       text-shadow: 0 0 20px #2f2d56;
       margin-top: 90px;
     }
@@ -28,7 +28,7 @@
       max-width: 90%;
       margin: 20px auto 0;
       color: white;
-      font-family: 'soleil', sans-serif;
+      font-family: @body-font;
       text-shadow: 2px 2px 0 #15133c, 2px 2px 10px #15133c;
       font-size: 1.2em;
     }
@@ -56,14 +56,14 @@
         padding: 0;
         height: auto;
         display: block;
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           height: auto;
           margin: 5px 15px 15px;
         }
       }
 
       .post-content {
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           display: none;
         }
       }
@@ -75,7 +75,7 @@
       position: relative;
       display: flex;
       flex-direction: column;
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         width: 100%;
         height: auto;
       }
@@ -84,7 +84,7 @@
         margin: 0;
         min-height: 140px;
         padding: 0 5px;
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           margin: 0 0 80px;
           min-height: unset;
         }
@@ -112,11 +112,11 @@
         min-height: 80px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: 'soleil', sans-serif;
+        font-family: @body-font;
         font-size: 1em !important;
         text-overflow: ellipsis;
         font-weight: 400;
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           font-size: 0.95em !important;
           min-height: unset;
           height: fit-content;
@@ -150,7 +150,7 @@
             background: @secondary-color;
             color: white;
           }
-          @media(max-width: 600px) {
+          @media(max-width: @mobile-breakpoint) {
             display: block !important;
           }
         }
@@ -186,14 +186,14 @@
   .page-head {
     margin: 40px 40px 0;
     padding: 0;
-    @media(max-width: 800px) {
+    @media(max-width: @tablet-breakpoint) {
       margin: 40px 30px 0;
     }
   }
 
   .post-title {
     margin: 27px 28px 20px;
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       font-size: 3em;
     }
 
@@ -213,7 +213,7 @@
       @media(max-width: 900px) {
         width: 90% !important;
       }
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         width: 100% !important;
       }
     }
@@ -235,10 +235,10 @@
     grid-template-rows: 367px;
     grid-column-gap: 10px;
     margin: 30px 40px 20px;
-    @media(max-width: 800px) {
+    @media(max-width: @tablet-breakpoint) {
       margin: 30px 30px 20px;
     }
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       grid-template-columns: [first] 1fr;
       margin: 20px;
     }
@@ -275,7 +275,7 @@
           margin-bottom: 0;
         }
       }
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         width: 100%;
       }
 
@@ -307,10 +307,10 @@
         position: relative;
         display: block;
         transition: all 0.3s ease-out;
-        @media(max-width: 800px) {
+        @media(max-width: @tablet-breakpoint) {
           max-height: 206px;
         }
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           max-height: 186px;
         }
 
@@ -344,13 +344,13 @@
         @media(max-width: 900px) {
           min-height: 172px;
         }
-        @media(max-width: 800px) {
+        @media(max-width: @tablet-breakpoint) {
           min-height: 104px;
         }
         @media(max-width: 700px) {
           min-height: 121px;
         }
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           min-height: 0;
         }
 
@@ -371,11 +371,11 @@
           margin: 5px 0;
           line-height: 1.5;
           text-align: left;
-          font-family: 'soleil', sans-serif;
+          font-family: @body-font;
           flex-grow: 1;
           flex-shrink: 0;
           flex-basis: auto;
-          @media(max-width: 600px) {
+          @media(max-width: @mobile-breakpoint) {
             margin: 10px 0 25px;
             min-height: 0;
           }
@@ -389,7 +389,7 @@
           bottom: 20px;
           right: 20px;
           font-size: 0.8em;
-          font-family: 'soleil', sans-serif;
+          font-family: @body-font;
         }
       }
     }
@@ -402,7 +402,7 @@
 
 .tag-image {
   margin-top: 30px;
-  @media(max-width: 600px) {
+  @media(max-width: @mobile-breakpoint) {
     display: none;
   }
 }
