--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -8,7 +8,7 @@
   white-space: pre-wrap !important;
   font-weight: 400;
   font-family: 'Hack';
-  @media(max-width: 600px) {
+  @media(max-width: @mobile-breakpoint) {
     padding: 0 20px 20px;
     font-size: 12px !important;
 
@@ -46,7 +46,7 @@
     background: rgba(40, 48, 104, 0.4);
     letter-spacing: 1px;
     mix-blend-mode: color-dodge;
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       width: -webkit-fill-available;
       width: -moz-webkit-fill-available;
       padding: 8px 20px;
