--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -42,7 +42,7 @@
       color: #7f8ba7;
       opacity: 0.6;
 
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         white-space: pre;
         text-overflow: ellipsis;
         max-width: 100%;
@@ -113,7 +113,7 @@
       font-family: 'Hack';
       color: #a0e4cf;
 
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         white-space: pre;
         text-overflow: ellipsis;
         max-width: 100%;
