--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -7,11 +7,11 @@
   background: #eceff3;
   border-radius: 3px;
   box-shadow: -1px 1px 0 #d7e2e4;
-  @media(max-width: 800px) {
+  @media(max-width: @tablet-breakpoint) {
     margin: 0 0 30px;
     padding: 20px 10px 10px;
   }
-  @media(max-width: 600px) {
+  @media(max-width: @mobile-breakpoint) {
     margin: 10px 0 30px;
     padding: 20px 0 10px;
   }
@@ -29,7 +29,7 @@
     margin-top: 0;
     line-height: 1;
     height: fit-content;
-    @media(max-width: 800px) {
+    @media(max-width: @tablet-breakpoint) {
       width: 96%;
       margin: 0 auto 2px;
     }
@@ -44,7 +44,7 @@
     margin-bottom: 10px;
     margin-left: 0;
     padding-left: 10px;
-    @media(max-width: 600px) {
+    @media(max-width: @mobile-breakpoint) {
       margin: 15px auto 10px;
       max-width: 90%;
     }
@@ -64,7 +64,7 @@
       * {
         transition: all 0.2s ease-out;
       }
-      @media(max-width: 600px) {
+      @media(max-width: @mobile-breakpoint) {
         line-height: 1.3;
         margin-bottom: 15px;
         padding-left: 0;
@@ -86,7 +86,7 @@
         font-family: 'soleil', sans-serif !important;
         margin-right: 8px;
         font-size: 13px;
-        @media(max-width: 600px) {
+        @media(max-width: @mobile-breakpoint) {
           min-width: 50px;
           margin-right: 2px;
           font-weight: normal;
@@ -96,8 +96,8 @@
 
       a {
         color: #597d87;
-        @media(max-width: 600px) {
-          font-family: 'soleil', sans-serif;
+        @media(max-width: @mobile-breakpoint) {
+          font-family: @body-font;
           font-size: 0.9em;
         }
       }
